--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -17,6 +17,9 @@
   "jest": {
     "preset": "@repo/jest-presets/jest/node"
   },
+  "dependencies": {
+    "mongodb": "^6.3.0"
+  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-presets": "workspace:*",
